[project]
name = "crypto-dashboard"
version = "0.0.1"

[dependencies]
streamlit = "*"
requests = "*"
yfinance = "*"
dask = "*"
numpy = "*"
plotly = "*"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["dashboard/"]

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
select = ["E", "F", "I"]
