[project]
name = "crypto-dashboard"
version = "0.0.1"

dependencies = [
    "streamlit ==1.25.0",
    "requests >=2.18, <3.0",
    "python-coinmarketcap ==0.5",
    "dask==2023.3.2 ",
    "numpy==1.25.2",
    "plotly ~= 5.3.1",
    "matplotlib ==3.7.2",

]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["dashboard/"]

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99
select = ["E", "F", "I"]
